--- a/canvas.html
+++ b/canvas.html
@@ -1,23 +1,24 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>HTML5 Canvas爱心表白动画特效DEMO演示</title>
-
-<style>
-html, body {
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  background: #000;
-}
-canvas {
-  width: 100%;
-  height: 100%;
-}
-</style>
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML5 Canvas爱心表白动画特效DEMO演示</title>
+  <style>
+    html, body {
+      height: 100%;
+      padding: 0;
+      margin: 0;
+      background: #000;
+    }
+    canvas {
+      width: 100%;
+      height: 100%;
+    }
+    </style>
 </head>
+
 <body>
 
 <div style="text-align:center;clear:both;">
